<resources>
    <string name="app_name">ThingPlug Device</string>

    <string name="actionbar_login">Login</string>
    <string name="actionbar_terms">Terms</string>
    <string name="actionbar_deviceList">Select device</string>
    <string name="actionbar_list">Local Sensor List</string>
    <string name="actionbar_detail">Sensor Detail</string>
    <string name="actionbar_setting">Setting</string>
    <string name="actionbar_setting_server_info">Change server info.</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="thingplug_regist_url"><u>Join to be a ThingPlug member</u></string>
    <string name="change_server_info">Change Server Info.</string>
    <string name="login_fail">Fail to login. Please check the server info.</string>
    <string name="error_invalid_email">This ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="terms_title">ThingPlug 개인위치정보 이용 동의(필수)</string>
    <string name="terms_content">ThingPlug 서비스(이하 “서비스”라 한다)와 관련하여, 본인은 동의내용을 숙지하였으며, 이에 따라 귀사(SK텔레콤주식회사)가 수집한 본인의 개인위치정보를 이용하여 위치기반서비스를 제공하는 것에 동의합니다.\n
        ○ 개인위치정보를 이용한 위치기반서비스 제공 동의\n
        (1) 본인은 서비스에서 제공되는 위치기반서비스를 이용하기 위하여, 아래 (2)의 내용 및 회사의 위치기반서비스 이용약관(www.tworld.co.kr에서 동 이용약관의 내용확인 가능) 및 ThingPlug 서비스 이용약관(thingplug.sktiot.com에서 동 이용약관의 내용확인 가능)의 내용에 동의합니다.\n
        (2) 서비스에서 제공하는 위치기반서비스의 내용\n
        - 서비스 내용: ThingPlug Service App을 이용하는 사용자에게 ThingPlug Device App이 설치된 스마트폰의 현재 위치 조회 기능을 제공함\n
        (3) 위치기반서비스 사업자의 상호, 주소, 전화번호 그 밖의 연락처 / 개인위치정보주체 및 법정대리인의 권리와 그 행사방법 / 위치기반서비스사업자가 제공하고자 하는 위치기반서비스의 내용 / 위치정보 이용∙제공사실 확인자료의 보유근거 및 보유기간 등은 회사의 위치기반서비스 이용약관 및 ThingPlug 서비스 이용약관에 기재된 바에 따릅니다.</string>
    <string name="terms_agree">Agree</string>
    <string name="terms_disagree">Disagree</string>

    <string name="actuator_run">Run</string>
    <string name="actuator_led_notification">Notification for LED control</string>

    <string name="setting_menu">Settings</string>
    <string name="setting_read">Sensor read interval</string>
    <string name="setting_transfer">Transfer interval</string>
    <string name="setting_update_list">List update interval</string>
    <string name="setting_update_graph">Graph update interval</string>
    <string name="setting_measure">msec</string>
    <string name="setting_error">Unable to set under %1$dmsec in %2$s.</string>
    <string name="setting_save">Save</string>
    <string name="setting_cancel">Cancel</string>
    <string name="setting_logout">Logout</string>

    <string name="setting_portal">ThingPlug portal</string>
    <string name="setting_login">Login</string>
    <string name="setting_search">Search</string>
    <string name="setting_register">Register</string>
    <string name="setting_server">ThingPlug server</string>
    <string name="setting_url">URL</string>
    <string name="setting_appeui">AppEUI</string>
    <string name="setting_use_tls">Use TLS</string>
    <string name="setting_use_tlv_tdv">TLV/TDV</string>
    <string name="setting_use_tlv">TLV</string>
    <string name="setting_use_tdv">TDV</string>
    <string name="setting_load_default">Load default</string>
</resources>
