<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_terms"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.skt.onem2m_device.ui.TermsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text="@string/terms_title" />

    <TextView
        android:id="@+id/terms_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/xml_border"
        android:padding="10dp"
        android:textSize="13dp"
        android:scrollbars="vertical"
        android:text="@string/terms_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/terms_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_agree" />
        <Button
            android:id="@+id/terms_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_disagree" />
    </LinearLayout>

</LinearLayout>
